# route-llm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.local.yml
.github/workflows/: ci.yml
assets/: admin.css  admin.js  site.webmanifest
docs/: architecture.md  newsyslog.route-llm.conf
src/: admin_ui.rs  assets.rs  cli.rs  db.rs  http_proxy.rs  main.rs  responses_compat.rs  server.rs
src/admin_ui/: actions.rs  auth.rs  components.rs  forms.rs  mod.rs  page.rs  render.rs  scripts.rs  stats_render.rs  styles.rs  tests.rs  text.rs
src/db/: admin_mutations.rs  admin_operations.rs  admin_stats.rs  audit.rs  mod.rs  models.rs  response_state.rs  routing.rs  runtime_cleanup.rs  schema.rs  state.rs  tests.rs  util.rs
src/http_proxy/: audit.rs  errors.rs  mod.rs  models_catalog.rs  request_body.rs  stream.rs  support.rs  tests.rs
src/responses_compat/: ids.rs  input.rs  json_response.rs  mod.rs  stream.rs  tests.rs  tools.rs  usage.rs
