[package]
name = "route-llm"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Small local OpenAI-compatible routing proxy with SQLite-backed keys and model routing."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/route-llm"
keywords = ["openai", "proxy", "axum", "sqlite", "llm"]
categories = ["command-line-utilities", "web-programming::http-server"]
include = [
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE",
  "SECURITY.md",
  "AGENTS.md",
  "docs/**",
  "src/**",
  "assets/**",
]

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.8"
bytes = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
